--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -123,12 +123,12 @@ jobs:
           make docker-build
       - name: Create image tarball
         run: |
-          docker save --output growthbook-controller-container.tar growthbook-controller:latest
+          docker save --output webhook-controller-container.tar webhook-controller:latest
       - name: Upload image
         uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4.4.0
         with:
-          name: growthbook-controller-container
-          path: growthbook-controller-container.tar        
+          name: webhook-controller-container
+          path: webhook-controller-container.tar        
       - id: profiles
         name: Determine test profiles
         run: |
@@ -158,14 +158,14 @@ jobs:
         uses: engineerd/setup-kind@aa272fe2a7309878ffc2a81c56cfe3ef108ae7d0 #v0.5.0
         with:
           version: v0.17.0
-      - name: Download growthbook-controller container
+      - name: Download webhook-controller container
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
-          name: growthbook-controller-container
+          name: webhook-controller-container
           path: /tmp
       - name: Load images
         run: |
-          docker load --input /tmp/growthbook-controller-container.tar
+          docker load --input /tmp/webhook-controller-container.tar
           docker image ls -a
       - name: Setup Kustomize
         uses: imranismail/setup-kustomize@2ba527d4d055ab63514ba50a99456fc35684947f # v2.1.0
@@ -176,10 +176,10 @@ jobs:
         if: failure()
         run: |
           kubectl -n kube-system describe pods
-          kubectl -n growthbook-system describe pods
-          kubectl -n growthbook-system get all
-          kubectl -n growthbook-system logs deploy/growthbook-controller
-          kubectl -n growthbook-system get growthbookinstance -o yaml
+          kubectl -n webhook-system describe pods
+          kubectl -n webhook-system get all
+          kubectl -n webhook-system logs deploy/webhook-controller
+          kubectl -n webhook-system get webhookinstance -o yaml
 
   test-chart: 
     runs-on: ubuntu-latest
@@ -209,17 +209,17 @@ jobs:
       - name: Create kind cluster
         uses: helm/kind-action@0025e74a8c7512023d06dc019c617aa3cf561fde # v1.10.0
 
-      - name: Download growthbook-controller container
+      - name: Download webhook-controller container
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
-          name: growthbook-controller-container
+          name: webhook-controller-container
           path: /tmp
 
       - name: Load image
         run: |
-          docker load --input /tmp/growthbook-controller-container.tar
-          docker tag growthbook-controller:latest ghcr.io/doodlescheduling/growthbook-controller:v0.0.0
-          kind load docker-image ghcr.io/doodlescheduling/growthbook-controller:v0.0.0 --name chart-testing
+          docker load --input /tmp/webhook-controller-container.tar
+          docker tag webhook-controller:latest ghcr.io/doodlescheduling/webhook-controller:v0.0.0
+          kind load docker-image ghcr.io/doodlescheduling/webhook-controller:v0.0.0 --name chart-testing
           docker image ls -a
           
       - name: Run chart-testing (install)
