--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -136,51 +136,6 @@ jobs:
           echo $profiles
           echo "::set-output name=matrix::$profiles"
 
-  e2e-tests:
-    runs-on: ubuntu-latest
-    needs:
-    - build
-    strategy:
-      matrix:
-        profile: ${{ fromJson(needs.build.outputs.profiles) }}
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@95d9a5deda9de15063e7595e9719c11c38c90ae2 # v2.13.2
-        with:
-          egress-policy: audit
-      - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - name: Setup Go
-        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
-        with:
-          go-version: 1.25.x
-      - name: Setup Kubernetes
-        uses: engineerd/setup-kind@aa272fe2a7309878ffc2a81c56cfe3ef108ae7d0 #v0.5.0
-        with:
-          version: v0.17.0
-      - name: Download webhook-controller container
-        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
-        with:
-          name: webhook-controller-container
-          path: /tmp
-      - name: Load images
-        run: |
-          docker load --input /tmp/webhook-controller-container.tar
-          docker image ls -a
-      - name: Setup Kustomize
-        uses: imranismail/setup-kustomize@2ba527d4d055ab63514ba50a99456fc35684947f # v2.1.0
-      - name: Run test
-        run: |
-          make kind-test TEST_PROFILE=${{ matrix.profile }}
-      - name: Debug failure
-        if: failure()
-        run: |
-          kubectl -n kube-system describe pods
-          kubectl -n webhook-system describe pods
-          kubectl -n webhook-system get all
-          kubectl -n webhook-system logs deploy/webhook-controller
-          kubectl -n webhook-system get webhookinstance -o yaml
-
   test-chart: 
     runs-on: ubuntu-latest
     needs:
@@ -227,6 +182,6 @@ jobs:
 
   test-success:
     runs-on: ubuntu-latest
-    needs: [test, e2e-tests]
+    needs: [test]
     steps:
     - run: echo "all tests succeeded"
