--- a/config/base/rbac/cluster_admin_rolebinding.yaml
+++ b/config/base/rbac/cluster_admin_rolebinding.yaml
@@ -1,11 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: manager-rolebinding
+  name: manager
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: manager-role
 subjects:
-- kind: ServiceAccount
-  name: controller-manager
+  - kind: ServiceAccount
+    name: controller-manager
+    namespace: webhook-system
